@@ -20,6 +20,10 @@ EventQL v0.4.0 beta;
     session. This also adds a new requirement that all operations must be
     executed from within a valid database thread.
 
+  * Added the following new configuration options: server.c2s_io_timeout,
+    server.c2s_idle_timeout, server.s2s_io_timeout, server.s2s_idle_timeout,
+    server.hearbeat_rate
+
 
 EventQL v0.3.2 beta;
 
